syntax = "proto3";

package shinkansen.user;

import "shared/common.proto";
import "user/user_messages.proto";

option go_package = "github.com/shinkansen-commerce/shinkansen/gen/proto/go/user";

service UserService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
  rpc ListAddresses(ListAddressesRequest) returns (ListAddressesResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
  rpc DeleteAddress(DeleteAddressRequest) returns (shinkansen.common.Empty);
}
